Closed
Bug 1370263
Opened 9 years ago
Closed 9 years ago
Crash in mozilla::extensions::URLInfo::Scheme
Categories
(WebExtensions :: Request Handling, defect, P1)
Tracking
(firefox-esr52 unaffected, firefox53 unaffected, firefox54 unaffected, firefox55blocking fixed, firefox56 fixed)
RESOLVED
FIXED
mozilla56
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | blocking | fixed |
| firefox56 | --- | fixed |
People
(Reporter: calixte, Assigned: kmag)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression, Whiteboard: [clouseau][triaged])
Crash Data
Attachments
(2 files, 1 obsolete file)
This bug was filed from the Socorro interface and is
report bp-78102839-3c9c-4267-8374-2516d0170605.
=============================================================
There is 1 crash in nightly 55 with buildid 20170605100313. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1322235.
[1] https://hg.mozilla.org/mozilla-central/rev?node=94a3fb9eb7e4c933ae318ff9b0a5bc9a3ac28e75
Flags: needinfo?(kmaglione+bmo)
Updated•9 years ago
|
Assignee: nobody → kmaglione+bmo
Priority: -- → P1
Whiteboard: [clouseau] → [clouseau][triaged]
| Comment hidden (mozreview-request) |
Comment 2•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8874500 [details]
Bug 1370263: Null check document URI before matching content scripts.
https://reviewboard.mozilla.org/r/145870/#review149804
Attachment #8874500 -
Flags: review+
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8874500 [details]
Bug 1370263: Null check document URI before matching content scripts.
https://reviewboard.mozilla.org/r/145870/#review149808
Attachment #8874500 -
Flags: review?(mixedpuppy) → review+
| Assignee | ||
Comment 4•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/f904e3d130ab951280c19ab2f32384fe30374bce
Bug 1370263: Null check document URI before matching content scripts. r=mixedpuppy
Updated•9 years ago
|
Crash Signature: [@ mozilla::extensions::URLInfo::Scheme] → [@ mozilla::extensions::URLInfo::Scheme]
[@ mozilla::extensions::URLInfo::Scheme const ]
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment 6•9 years ago
|
||
the crash signature is still present in today's build 20170606030207 containing the patch:
https://crash-stats.mozilla.com/signature/build_id=>%3D20170606030207&signature=mozilla%3A%3Aextensions%3A%3AURLInfo%3A%3AScheme#reports
| Comment hidden (mozreview-request) |
Comment 8•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8875001 [details]
Bug 1370263: Don't try to match content scripts for non-codebase principals.
https://reviewboard.mozilla.org/r/146350/#review150862
Kris is thinking more about DocInfo::Principal, clearing review for now
Attachment #8875001 -
Flags: review?(mixedpuppy)
STR:
Nightly 55.0a1 (2017-06-10) + https://addons.mozilla.org/firefox/addon/copy-link-text-webextension/ 1.4.7.
Open Scratchpad.
Has STR: --- → yes
Comment 10•9 years ago
|
||
[Tracking Requested - why for this release]:
the two signatures account for ~10% of browser crashes in yesterday's nightly build (20170611030208).
it would be great if we got a fix in time for building beta 1.
tracking-firefox55:
--- → ?
Comment 11•9 years ago
|
||
Per comment #10, mark 55 blocking. It would be great if we can take this fix in 55.0b1.
Hi Kris, Andy, this bug is deemed a blocker to gtb (go to build) 55.0b1 as it's a top crasher. Do you agree with that assessment? At the moment my plan is to block beta1 build until we have a fix for this. Will appreciate a prompt fix, if we know what that fix might be, we'd like to land it in the next hour or two so b1 schedule is not impacted. Thanks!
Flags: needinfo?(amckay)
Updated•9 years ago
|
status-firefox56:
--- → affected
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•9 years ago
|
Attachment #8874500 -
Attachment is obsolete: true
Comment 14•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8876889 [details]
Bug 1370263: Don't try to match content scripts for non-codebase principals.
https://reviewboard.mozilla.org/r/148218/#review152598
Attachment #8876889 -
Flags: review?(mixedpuppy) → review+
| Assignee | ||
Comment 15•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/6dca7816cb61a698b60a376a0047390c0fce5cc2
Bug 1370263: Don't try to match content scripts for non-codebase principals. r=mixedpuppy
Updated•9 years ago
|
Flags: needinfo?(amckay)
Hi Kris, Ryan, please land the patches on m-b asap. I'd like to include them in 55.0b1. In casethis causes a fallout based on tonight's Nightly, we can do a build2 after backing out this patch.
Flags: needinfo?(ryanvm)
Comment 17•9 years ago
|
||
| bugherder uplift | ||
Comment 18•9 years ago
|
||
| bugherder | ||
Status: REOPENED → RESOLVED
Closed: 9 years ago → 9 years ago
Resolution: --- → FIXED
Updated•9 years ago
|
Flags: needinfo?(ryanvm)
Flags: needinfo?(kmaglione+bmo)
Updated•8 years ago
|
Target Milestone: mozilla55 → mozilla56
Updated•8 years ago
|
Product: Toolkit → WebExtensions
You need to log in
before you can comment on or make changes to this bug.
Description
•