Bug 1370263 - Don't try to match content scripts for non-codebase principals. r=mixedpuppy, a=ritu CLOSED TREE

MozReview-Commit-ID: 96lQfKC9PGx